# Analysis_AI

./: .env.postgres  .gitignore  001_goals.md  999_Plan.md  Project_description.md  README.md  Vision.md  api.py  app.py  demo.py  docker-compose.yml  graph.py  llm.py  main.py  pyproject.toml  settings.py  storage.py  webpage.py
001_Pytest/: test_app.py
003_ExampleData/: bad_data_non_numeric.tsv  bad_data_numeric_index.tsv  endotoxin_data.txt  good_data.tsv
Progress_bar/: 002_file_uploads.md
db/init/: 001_schema.sql
frontend/: index.html
learning_notes/: 001_goals.md  002_frontend_plan.md  999_Plan.md
static/: index.html
static/js/: app.js
